# kaleidoscope

./: .gitignore  CMakeLists.txt
include/kaleidoscope/: Lexer.h  SourceManager.h  Token.h  TokenKinds.def  TokenKinds.h
lib/: CMakeLists.txt  Lexer.cpp  SourceManager.cpp  SyntaxKind.cpp
unittest/: CMakeLists.txt  LexerTests.cpp
